[package]
name = "Pr0Linkers"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
reqwest = { version = "0.11.18", features = ["blocking"] }
url = "2.4.0"
tokio = { version = "1.29.0", features = ["full"] }
chrono = "0.4.26"
async-once-cell = "0.5.2"
once_cell = "1.18.0"
http = "0.2.9"
thiserror = "1.0.40"